# encrypted-dnn-alzheimers

./: README.md  git.gitignore
inputs/: data.csv  layer_0_biases.txt  layer_0_weights.txt  layer_1_biases.txt  layer_1_weights.txt  layer_2_biases.txt  layer_2_weights.txt
project/: CMakeLists.txt  ckks_helper.cpp  ckks_helper.h  filereader.cpp  filereader.h  main.cpp
